# SSHCrack

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml  codeql.yml  release.yml
docs/: DISTRIBUTED.md
scripts/: deploy_aws.py
sshcrack/: __init__.py  __main__.py  cli.py  cracker.py  display.py  engine.py  parser.py  session.py  wordlist.py
sshcrack/cpu/: __init__.py  simd.py  wordfreq.py
sshcrack/distributed/: __init__.py  master.py  worker.py
sshcrack/gpu/: __init__.py  accelerator.py  cuda_kernel.cu  opencl_kernel.cl
sshcrack/rules/: __init__.py  hashcat.py  mask.py  mutations.py
tests/: test_all.py  test_batch2.py
tests/keys/: ecdsa_legacy_abc123.key  ecdsa_legacy_abc123.key.pub  ed25519_puppet.key  ed25519_puppet.key.pub  openssh_bad_fixture.key  rsa_legacy_nopass.key  rsa_legacy_nopass.key.pub  rsa_legacy_puppet.key  rsa_legacy_puppet.key.pub
